# rust-api

./: .dockerignore  .gitignore  CLAUDE.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_initial.sql
backend/src/: main.rs
backend/src/handlers/: mod.rs
backend/src/models/: mod.rs  state.rs
backend/src/routes/: mod.rs
frontend/: index.html  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CreatePipelineModal.css  CreatePipelineModal.tsx  PipelineCard.css  PipelineCard.tsx  StatusBadge.css  StatusBadge.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
scripts/: dev.sh
